<resources>
    <string name="app_name">MySample</string>
    <string name="edit_message">Enter a message</string>
    <string name="hello_world">Hello Girls!!!</string>

    <string name="button_send">Send</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="prompt_username">User Name</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
<<<<<<< HEAD
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
=======
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
     <string name="contact_us">Contact Us</string>
    <string name="about">About</string>

>>>>>>> 9ffe3257fdf078124fd4e661ddc24bfbbf458580
    <string-array name="itemList">
        <item>Home</item>
        <item>Main Screen</item>
        <item>End Screen</item>
    </string-array>
    <array name="IconList">
        <item>@drawable/minion</item>
        <item>@drawable/minion1</item>
        <item>@drawable/minion2</item>
    </array>
    <string name="title_activity_actionbar_">actionbar_Activity</string>
</resources>
