<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.paypal.keraj.mysample.DisplayMessageActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item
        android:id="@+id/search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="always"
        android:icon="@drawable/minion"
        />
      <item
        android:id="@+id/contact_us"
        android:orderInCategory="100"
        android:title="@string/contact_us"
        app:showAsAction="never"/>
    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never"/>
</menu>
